--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   image: ^3.2.0
   characters: ^1.2.1
+  flutter_windowmanager: ^0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -42,6 +43,7 @@ dev_dependencies:
 
   build_runner: ^2.1.11
   mobx_codegen: ^2.0.7
+  flutter_lints: ^2.0.1
 
 flutter:
   uses-material-design: true
