dark theme bug fixes & minor improvements

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: exam_app
-description: College Capstone Project
+description: An AI Proctored Online Exam App
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
